Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL)
-
None
Description
http://buildbot.askmonty.org/buildbot/builders/kvm-rpm-centos74-amd64-debug/builds/3098
http://buildbot.askmonty.org/buildbot/builders/kvm-bintar-centos6-amd64-debug/builds/2351 (earlier occurrence with a decent stack trace)
|
bb-10.2-release f8b5e147 |
innodb_fts.sync_ddl 'innodb' w4 [ fail ]
|
Test ended at 2019-12-03 18:04:32
|
|
|
CURRENT_TEST: innodb_fts.sync_ddl
|
mysqltest: At line 148: query 'SET GLOBAL debug_dbug = @save_debug' failed: 2013: Lost connection to MySQL server during query
|
|
|
The result from queries just before the failure was:
|
< snip >
|
DROP INDEX idx1,
|
ALGORITHM=INPLACE;
|
DROP TABLE t1;
|
SET GLOBAL debug_dbug = @save_debug;
|
CREATE TABLE t1 (
|
value VARCHAR(1024)
|
) ENGINE=InnoDB;
|
CREATE FULLTEXT INDEX idx1 ON t1(value);
|
Warnings:
|
Warning 124 InnoDB rebuilding table to add column FTS_DOC_ID
|
SET GLOBAL debug_dbug = '+d,fts_instrument_sync_request,fts_instrument_msg_sync_sleep';
|
INSERT INTO t1 (value) VALUES
|
('example, a column that uses the latin1 character'),
|
('collation of latin1_bin to make it case sensitive')
|
;
|
ALTER TABLE t1
|
DROP INDEX idx1,
|
ALGORITHM=COPY;
|
DROP TABLE t1;
|
SET GLOBAL debug_dbug = @save_debug;
|
|
|
More results from queries before failure can be found in /usr/local/mariadb-10.2.30-linux-x86_64/mysql-test/var/4/log/sync_ddl.log
|
|
|
|
|
Server [mysqld.1 - pid: 15783, winpid: 15783, exit: 256] failed during test run
|
Server log from this test:
|
----------SERVER LOG START-----------
|
?func: THD::enter_stage: /home/buildbot/buildbot/build/storage/innobase/handler/ha_innodb.cc:1707
|
191203 18:04:31 [ERROR] mysqld got signal 11 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
|
Server version: 10.2.30-MariaDB-debug-log
|
key_buffer_size=1048576
|
read_buffer_size=131072
|
max_used_connections=3
|
max_threads=153
|
thread_count=9
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 63104 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
|
Thread pointer: 0x7f46ec000af0
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x7f46ff5fdd98 thread_stack 0x49000
|
/usr/local/mariadb-10.2.30-linux-x86_64/bin/mysqld(my_print_stacktrace+0x2b)[0x7f471d620679]
|
mysys/stacktrace.c:267(my_print_stacktrace)[0x7f471cfa8b3d]
|
sigaction.c:0(__restore_rt)[0x7f471c4634a0]
|
fnmatch.c:0(internal_fnmatch)[0x7f471b3a6133]
|
/lib64/libc.so.6(fnmatch+0x70)[0x7f471b3aa770]
|
/usr/local/mariadb-10.2.30-linux-x86_64/bin/mysqld(+0xda5ac2)[0x7f471d637ac2]
|
dbug/dbug.c:1540(InList)[0x7f471d638494]
|
dbug/dbug.c:1764(_db_keyword_)[0x7f471d6388d3]
|
dbug/dbug.c:1264(_db_pargs_)[0x7f471d24f434]
|
que/que0que.cc:980(que_thr_step)[0x7f471d32712b]
|
include/my_atomic.h:274(my_atomic_add64)[0x7f471d2fc2e6]
|
pthread_create.c:0(start_thread)[0x7f471c45b7f1]
|
/lib64/libc.so.6(clone+0x6d)[0x7f471b3dbccd]
|
|
|
Trying to get some variables.
|
Some pointers may be invalid and cause the dump to abort.
|
Query (0x0):
|
Connection ID (thread ID): 4
|
Status: NOT_KILLED
|
|
|
Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on
|
|
|
The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
|
information that should help you find out what is causing the crash.
|
Writing a core file...
|
Working directory at /dev/shm/var_auto_O8r_/4/mysqld.1/data
|
Resource Limits:
|
Limit Soft Limit Hard Limit Units
|
Max cpu time unlimited unlimited seconds
|
Max file size unlimited unlimited bytes
|
Max data size unlimited unlimited bytes
|
Max stack size 10485760 unlimited bytes
|
Max core file size unlimited unlimited bytes
|
Max resident set unlimited unlimited bytes
|
Max processes 1024 unlimited processes
|
Max open files 1024 1024 files
|
Max locked memory 65536 65536 bytes
|
Max address space unlimited unlimited bytes
|
Max file locks unlimited unlimited locks
|
Max pending signals 46692 46692 signals
|
Max msgqueue size 819200 819200 bytes
|
Max nice priority 0 0
|
Max realtime priority 0 0
|
Max realtime timeout unlimited unlimited us
|
Core pattern: core
|
|
|
----------SERVER LOG END-------------
|
#3 <signal handler called>
|
#4 0x00007f471b3a6133 in internal_fnmatch () from /lib64/libc.so.6
|
#5 0x00007f471b3aa770 in fnmatch@@GLIBC_2.2.5 () from /lib64/libc.so.6
|
#6 0x00007f471d637ac2 in InList (linkp=0x8f8f8f8f8f8f8f8f, cp=0x7f471d84196a "ib_que", exact_match=0) at /home/buildbot/buildbot/build/dbug/dbug.c:1540
|
#7 0x00007f471d638494 in _db_keyword_ (cs=0x7f46ec000a30, keyword=0x7f471d84196a "ib_que", strict=0) at /home/buildbot/buildbot/build/dbug/dbug.c:1764
|
#8 0x00007f471d6388d3 in _db_pargs_ (_line_=982, keyword=0x7f471d84196a "ib_que") at /home/buildbot/buildbot/build/dbug/dbug.c:1264
|
#9 0x00007f471d24f434 in que_thr_step (thr=0x7f471f671a08) at /home/buildbot/buildbot/build/storage/innobase/que/que0que.cc:980
|
#10 que_run_threads_low (thr=0x7f471f671a08) at /home/buildbot/buildbot/build/storage/innobase/que/que0que.cc:1102
|
#11 que_run_threads (thr=0x7f471f671a08) at /home/buildbot/buildbot/build/storage/innobase/que/que0que.cc:1142
|
#12 0x00007f471d32712b in trx_purge (n_purge_threads=4, batch_size=300, truncate=false, slot=0x7f471e06a428) at /home/buildbot/buildbot/build/storage/innobase/trx/trx0purge.cc:1739
|
#13 0x00007f471d2fc2e6 in srv_do_purge (arg=Unhandled dwarf expression opcode 0xf3
|
) at /home/buildbot/buildbot/build/storage/innobase/srv/srv0srv.cc:2735
|
#14 srv_purge_coordinator_thread (arg=Unhandled dwarf expression opcode 0xf3
|
) at /home/buildbot/buildbot/build/storage/innobase/srv/srv0srv.cc:2887
|
#15 0x00007f471c45b7f1 in start_thread () from /lib64/libpthread.so.0
|
#16 0x00007f471b3dbccd in clone () from /lib64/libc.so.6
|
innodb_fts.concurrent_insert: http://buildbot.askmonty.org/buildbot/builders/kvm-rpm-centos74-amd64-debug/builds/3102