MDEV-21223 innodb_fts.sync_ddl fails in buildbot, server crashed in que_thr_step

FreeState(): replace pointer to freed memory with NULL. This actually fixes a crash
which is use-after-free as reported by ASAN

DbugParse(): unconditionally lock mutex because we're touching shared init_settings.keywords